--- a/styles/favoriteMainPage.css
+++ b/styles/favoriteMainPage.css
@@ -277,6 +277,25 @@ a {
   height: 100%;
 }
 
+#libraryPage {
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 2;
+  margin-left: 180px;
+  margin-right: 10px;
+  margin-top: 80px;
+  margin-bottom: 10px;
+  height: 100%;
+  text-align: center;
+  font-size: 60px;
+}
+
+.libraryMessage {
+  align-self: center;
+  font-size: 2rem;
+  color: wheat;
+}
+
 .favTitle {
   margin: 8px;
   font-size: 20px;
